set html height to 100% to avoid problem with the browser search bar on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 /* Boostrap classes */
 * {
   box-sizing: border-box;
